feat: version 2 of multithreaded web server